--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "myapp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,15 @@
   "dependencies": {
     "express": "^4.18.1",
     "git": "^0.1.5"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jdh-0/myapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jdh-0/myapp/issues"
+  },
+  "homepage": "https://github.com/jdh-0/myapp#readme",
+  "description": ""
 }
